--- a/private/templates/IFRC/views/layout.html
+++ b/private/templates/IFRC/views/layout.html
@@ -5,10 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>{{try:}}{{=title}}{{except:}}{{=response.title or deployment_settings.get_system_name_short()}}{{pass}}</title>
 {{if response.refresh:}}{{=XML(response.refresh)}}{{pass}}
-<meta name="application-name" content="{{=request.application}}" />
+<meta name="application-name" content="{{=appname}}" />
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 <style type="text/css">
-{{if response.s3.rtl:}}
+{{if response.rtl:}}
   div { direction: rtl; }
 {{else:}}
   body { direction: ltr; }
@@ -19,24 +19,24 @@
 {{else:}}
   {{include "s3_include_min.html"}}
   {{# Built by /static/scripts/tools/build.sahana.py }}
-  <link href="/{{=request.application}}/static/styles/IFRC/sahana.min.css" rel="stylesheet" type="text/css" />
+  <link href="/{{=appname}}/static/styles/IFRC/sahana.min.css" rel="stylesheet" type="text/css" />
 {{pass}}
-{{for sheet in response.s3.external_stylesheets:}}
+{{for sheet in response.external_stylesheets:}}
   <link href="{{=sheet}}" rel="stylesheet" type="text/css" media="screen" charset="utf-8" />
 {{pass}}
-{{for sheet in response.s3.stylesheets:}}
-  <link href="/{{=request.application}}/static/styles/{{=sheet}}" rel="stylesheet" type="text/css" media="screen" charset="utf-8" />
+{{for sheet in response.stylesheets:}}
+  <link href="/{{=appname}}/static/styles/{{=sheet}}" rel="stylesheet" type="text/css" media="screen" charset="utf-8" />
 {{pass}}
-<script src="/{{=request.application}}/static/scripts/ext/src/locale/ext-lang-{{=response.s3.language}}.js" type="text/javascript"></script>
+<script src="/{{=appname}}/static/scripts/ext/src/locale/ext-lang-{{=response.language}}.js" type="text/javascript"></script>
 <script type="text/javascript">//<![CDATA[
   {{include "l10n.js"}}
-  S3.Ap = '/{{=request.application}}';
-{{if response.s3.rtl:}}
+  S3.Ap = '/{{=appname}}';
+{{if response.rtl:}}
   S3.rtl = true;
 {{else:}}
   S3.rtl = false;
 {{pass}}
-{{if response.s3.interactive:}}
+{{if response.interactive:}}
   S3.interactive = true;
 {{else:}}
   S3.interactive = false;
@@ -71,8 +71,8 @@
 <body>
   <div id='container'>
     <div id='header'>
-    <div id='society-icon'><img src='/{{=request.application}}/static/img/ifrc/dummy_flag.png' alt='Red Cross/Red Crescent'></div>
-	<div id='logo'><h1><a href='/{{=request.application}}/default/index' title='Return to Home Page'>Resource Mapping System</a></h1><div id='region' class='big'>Asia<br>Pacific</div></div>
+    <div id='society-icon'><img src='/{{=appname}}/static/img/ifrc/dummy_flag.png' alt='Red Cross/Red Crescent'></div>
+	<div id='logo'><h1><a href='/{{=appname}}/default/index' title='Return to Home Page'>Resource Mapping System</a></h1><div id='region' class='big'>Asia<br>Pacific</div></div>
         <div id='personal-menu'>
           {{if auth.is_logged_in():}}
             <div class="username fright">{{=auth.user.email}}</div>
@@ -111,25 +111,26 @@
                 {{include "breadcrumbs.html"}}
                 <a id='main-content'></a>
             {{include}}
+            {{try:}}{{=dashboard}}{{except:}}{{pass}}
             </div>
         </div>
         <div id='footer'>
             {{include "footer.html"}}
           {{if session.s3.debug:}}
-            {{=response.s3.toolbar()}}
+            {{=response.toolbar()}}
           {{pass}}
 		</div>
     </div>
 {{pass}}
-{{for script in response.s3.scripts:}}
+{{for script in response.scripts:}}
     {{=SCRIPT(_src = script)}}
 {{pass}}
 <script type="text/javascript">//<![CDATA[
-  {{for script in response.s3.js_global:}}
+  {{for script in response.js_global:}}
     {{=XML(script)}}
   {{pass}}
 $(document).ready(function() {
-  {{for script in response.s3.jquery_ready:}}
+  {{for script in response.jquery_ready:}}
     {{=XML(script)}}
   {{pass}}
     $('#nav').children('li').mouseover(function() {
